Update project from danh branch